--- a/index.html
+++ b/index.html
@@ -10,7 +10,12 @@
 </head>
 <body>
     <div id="app">
-        <p>Olá! O meu nome é {{ name }} e eu tenho {{ age }} anos.</p>
+        <form id="app-form">
+            <input type="text" v-model="input_name" placeholder="Digite seu nome">
+            <input type="submit" value="Enviar" v-on:click="submitForm">
+        </form>
+        <p>Meu nome é {{name}}</p>
+        <p>Meu nome é {{input_name}}</p>
     </div>
 </body>
 </html>
